[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = "Chef Integration Tests"
authors = ["Irfan Syed <isyed@progress.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.32.3"
junitxml = "^0.7"
junitparser = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "8.2.2"
pytest-html = "4.1.1"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"